# mca_python_course_content_2025

./: .gitignore  README.md  hello.py  pyproject.toml
.github/workflows/: deploy-docs.yml
assignments/: module_1_1.md
docs/source/: conf.py  index.rst  module1_assignment.rst  module1_features_and_history_of_python.rst  module1_input_output_and_data_types.rst  module1_installation_and_ides.rst  module1_interpreter_vs_compiler.rst  module1_operators_expressions_comments.rst  module2_assignment.rst  module2_combining_loops_conditionals.rst  module2_comprehensions.rst  module2_decision_making.rst  module2_else_with_loops.rst  module2_exception_handling.rst  module2_functions_enumerate_zip.rst  module2_looping.rst
module_1/: module1_features_and_history_of_python.md  module1_input_output_and_data_types.md  module1_installation_and_ides.md  module1_interpreter_vs_compiler.md  module1_operators_expressions_comments.md
